# corporate-researcher

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.github/workflows/: integration-tests.yml  unit-tests.yml
src/agents/: logger.py  prompts.py  services.py  utils.py
src/agents/analyst/: graph.py
src/agents/analyst/nodes/: analyst.py
src/agents/analyst/states/: analyst_agent_state.py
src/agents/corporate_researcher/: graph.py  nodes.py  states.py
src/agents/research_agent/: graph.py  nodes.py  states.py  tools.py
src/agents/research_manager/: graph.py
src/agents/research_manager/dtos/: research_manager.py
src/agents/research_manager/nodes/: research_manager.py  research_subgraphs.py
src/agents/research_manager/states/: research_manager_state.py
src/agents/research_supervisor/: graph.py  nodes.py  states.py  tools.py
src/agents/researcher/: graph.py
src/agents/researcher/nodes/: research_manager.py  should_continue.py  tool_executor.py
src/agents/researcher/states/: research_agent_state.py
src/agents/researcher/tools/: __init__.py
src/agents/scoping_agent/: graph.py  nodes.py  states.py
src/agents/searcher/: graph.py
src/agents/searcher/nodes/: searcher.py  tool_executor.py
src/agents/searcher/states/: searcher_agent_state.py
src/agents/searcher/tools/: __init__.py
src/utils/: get_api_key.py
